--- a/app/src/main/res/layout/fragment_activity_anak.xml
+++ b/app/src/main/res/layout/fragment_activity_anak.xml
@@ -1,130 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:id="@+id/scrollView"
+    android:background="#000000"
     android:layout_width="match_parent"
+    android:fillViewport="true"
     android:layout_height="match_parent"
-    android:paddingStart="40dp"
-    android:paddingTop="50dp"
-    android:paddingEnd="40dp"
-    android:orientation="vertical"
-    android:background="#E2F1F8"
-    tools:context=".ActivityAnakFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/textaktivitasbaru"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:text="Aktivitas Baru" />
-
-    <TextView
-        android:id="@+id/textkegiatananak"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="22dp"
-        android:text="yang dilakukan anak bulan ini" />
-
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:paddingStart="40dp"
+        android:paddingTop="50dp"
+        android:paddingEnd="40dp"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_rounded_10_bluemuda">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:src="@drawable/image7" />
+        android:background="#E2F1F8"
+        tools:context=".ActivityAnakFragment">
 
         <TextView
-            android:id="@+id/textinfo1"
-            android:layout_width="match_parent"
+            android:id="@+id/textaktivitasbaru"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Makan Sendiri"
-            android:textSize="15dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
             android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/bg_rounded"
-            android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:text="Aktivitas Baru" />
 
         <TextView
-            android:id="@+id/textinfo2"
+            android:id="@+id/textkegiatananak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="22dp"
+            android:text="yang dilakukan anak bulan ini" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mandiri"
-            android:textSize="15dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/bg_rounded"
-            android:textAlignment="center"
-            android:textColor="@color/black"/>
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="60dp"
+            android:background="@drawable/bg_rounded_10_bluemuda">
 
-        <TextView
-            android:id="@+id/textinfo3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Berbicara di depan umum"
-            android:textSize="15dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:textAlignment="center"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/image7" />
 
-        <TextView
-            android:id="@+id/textinfo4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Menegur Orang"
-            android:textSize="15dp"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"
-            android:textAlignment="center"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
+            <RelativeLayout
+                android:id="@+id/loadingPanel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:text="Tambahkan"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="30dp"
-            android:textSize="20dp"
-            android:backgroundTint="#86BBD0"
-            android:background="@drawable/bg_rounded_15_blue"
-            android:textColor="@color/white"/>
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true" />
+            </RelativeLayout>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:id="@+id/recyclerViewActivityAnak"/>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+            <EditText
+                android:id="@+id/editTextNewActivity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Aktifitas Baru"
+                android:textSize="15dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/bg_rounded"
+                android:textAlignment="center"
+                android:inputType="text"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonAddActivity"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:text="Tambahkan"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="30dp"
+                android:textSize="20dp"
+                android:backgroundTint="#86BBD0"
+                android:background="@drawable/bg_rounded_15_blue"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</ScrollView>
