--- a/app/src/main/res/layout/fragment_child_profile.xml
+++ b/app/src/main/res/layout/fragment_child_profile.xml
@@ -11,6 +11,19 @@
     android:orientation="vertical"
     >
 
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/textprofileanak"
         android:layout_width="wrap_content"
