--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -1,138 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingStart="40dp"
-    android:paddingTop="50dp"
-    android:paddingEnd="40dp"
-    android:orientation="vertical"
-    android:background="#E2F1F8"
-    tools:context=".ForumFragment">
 
-    <TextView
-        android:id="@+id/textforum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textColor="@color/black"
-        android:textSize="30dp"
-        android:text="Forum Diskusi"
-        android:textStyle="bold"/>
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
+    android:background="#000000"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".ForumFragment">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="40dp"
+        android:paddingTop="50dp"
+        android:paddingEnd="40dp"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_rounded_10_bluemuda">
+        android:background="#E2F1F8">
 
         <TextView
-            android:id="@+id/textpernyataan"
+            android:id="@+id/textforum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
             android:layout_gravity="center"
-            android:gravity="center"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="20dp"
-            android:text="Artikel Anak \n Kekerasan Fisik Pada Anak"/>
+            android:textSize="30dp"
+            android:text="Forum Diskusi"
+            android:textStyle="bold"/>
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="start"
-            android:background="@drawable/bg_rounded_30">
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/bg_rounded_10_bluemuda">
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/image1" />
-
-            <Button
-                android:id="@+id/buttonuser1"
-                android:layout_width="240dp"
+            <TextView
+                android:id="@+id/textViewJudulArtikel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="12dp"
-                android:layout_marginLeft="5dp"
-                android:theme="@style/Button.Primary"
-                android:background="@drawable/bg_rounded_30"
-                android:gravity="left"
-                android:text="Bu Ajeng\nSusu yang bagus untuk umur 3 tahun apa ya?"/>
-
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="start"
-            android:background="@drawable/bg_rounded_30">
-
-            <ImageView
-                android:id="@+id/imageView2"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:layout_gravity="center"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="20dp"
-                android:src="@drawable/image1" />
-
-            <Button
-                android:id="@+id/buttonuser2"
-                android:layout_width="240dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:gravity="center"
                 android:textColor="@color/black"
-                android:textSize="12dp"
-                android:theme="@style/Button.Primary"
-                android:background="@drawable/bg_rounded_30"
-                android:gravity="left"
-                android:text="Ibu Sri\nCara mengatur emosi untuk tidak melampiaskan ke anak?" />
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Artikel Anak \n "/>
+
+            <RelativeLayout
+                android:id="@+id/loadingPanel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:visibility="gone">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true" />
+            </RelativeLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recyclerViewForum"/>
+
+            <EditText
+                android:id="@+id/editTextNewDiscussion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="60dp"
+                android:hint="Diskusi Baru"
+                android:textSize="15sp"
+                android:paddingBottom="5dp"
+                android:paddingTop="5dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="start"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/bg_rounded"
+                android:textAlignment="textStart"
+                android:inputType="text|textMultiLine"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/buttonAddDiscussion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Tambahkan"
+                android:layout_gravity="center"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="100dp"
+                android:textSize="20dp"
+                android:backgroundTint="#86BBD0"
+                android:background="@drawable/bg_rounded_15_blue"
+                android:textColor="@color/white"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttondiskusi"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:gravity="center"
-            android:hint="Tambahkan Diskusi"
-            android:textSize="12dp"
-            android:textAllCaps="false"
-            android:paddingTop="5dp"
-            android:textAlignment="center"
-            android:layout_marginStart="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="500dp"
-            android:colorAccent="@style/Button.White"
-            android:background="@drawable/bg_rounded_30"
-            android:textColor="@color/black"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
