--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -167,69 +167,23 @@
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <TextView
-            android:id="@+id/textinfo1"
+        <RelativeLayout
+            android:id="@+id/loadingPanelRecycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Makan Sendiri"
-            android:textSize="15dp"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone">
 
-        <TextView
-            android:id="@+id/textinfo2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Mandiri"
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:paddingTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </RelativeLayout>
 
-        <TextView
-            android:id="@+id/textinfo3"
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Berbicara di depan umum"
-            android:textSize="15dp"
-            android:paddingTop="5dp"
-            android:textAlignment="center"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/textinfo4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Menegur Orang"
-            android:textSize="15dp"
-            android:paddingTop="5dp"
-            android:textAlignment="center"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/bg_rounded"
-            android:textColor="@color/black"/>
+            android:layout_height="200dp"
+            android:id="@+id/recyclerViewActivityAnak"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
