--- a/app/src/main/res/layout/fragment_pick_child.xml
+++ b/app/src/main/res/layout/fragment_pick_child.xml
@@ -1,98 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView android:id="@+id/scrollView"
+    android:background="#000000"
     android:layout_width="match_parent"
+    android:fillViewport="true"
     android:layout_height="match_parent"
-    tools:context=".PickChildFragment"
-    android:orientation="vertical"
-    android:background="#E2F1F8"
-    android:paddingStart="40dp"
-    android:paddingTop="50dp"
-    android:paddingEnd="40dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".PickChildFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pilih Profil Anak"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:textColor="#86BBD0"
-        android:gravity="center"
-        android:layout_marginBottom="20dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#E2F1F8"
+        android:paddingStart="40dp"
+        android:paddingTop="50dp"
+        android:paddingEnd="40dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anak Pertama"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pilih Profil Anak"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#86BBD0"
+            android:gravity="center"
+            android:layout_marginBottom="20dp"/>
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="William" />
+        <RelativeLayout
+            android:id="@+id/loadingPanel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anak Kedua"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true" />
+        </RelativeLayout>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="Jean" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recyclerViewChild"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anak Ketiga"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"/>
+        <Button
+            android:id="@+id/buttonRegister"
+            android:layout_width="125dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/bg_rounded_15_blue"
+            android:text="Pilih"
+            android:textSize="20dp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:padding="0dp"
+            android:theme="@style/Button.Primary"
+            android:layout_marginBottom="40dp"/>
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Steve"
-        android:textAllCaps="false"/>
+    </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anak Keempat"
-        android:textColor="@color/black"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"/>
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:textAllCaps="false"/>
-
-    <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="125dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/bg_rounded_15_blue"
-        android:text="Pilih"
-        android:textSize="20dp"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:padding="0dp"
-        android:theme="@style/Button.Primary"
-        android:layout_marginBottom="40dp"/>
-
-</LinearLayout>
+</ScrollView>
