--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,7 @@
     <style name="Button.White" parent="Theme.AnakKu">
         <item name="colorAccent">@android:color/white</item>
     </style>
+    <style name="Button.Danger" parent="Theme.AnakKu">
+        <item name="colorPrimary">#CC0000</item>
+    </style>
 </resources>
